# media-session.rs

./: Cargo.toml  README.md
examples/: cli.rs  get_info.rs  logging.rs
src/: error.rs  lib.rs  main.rs  media_info.rs  media_session.rs  media_session_controls.rs  media_status.rs  playback_state.rs  player.rs  traits.rs  utils.rs
src/imp/: mod.rs
src/imp/unix/: mod.rs
src/imp/windows/: media_session.rs  media_session_struct.rs  mod.rs  utils.rs
src/imp/windows/imp_channels/: manager.rs  media_session.rs  mod.rs  session.rs
src/imp/windows/imp_mutex/: manager.rs  media_session.rs  media_session_struct.rs  mod.rs  session.rs
