[package]
name = "media_session"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
base64 = "0.22.1"
futures = "0.3.30"
log = "0.4.22"
json = { version = "0.12.4", optional = true }
colog = { version = "1.3.0", optional = true }

[features]
json = ["dep:json"]
colog = ["dep:colog"]
cli = []

[target.'cfg(windows)'.dependencies]
windows = { version = "0.56.0", features = [
  "Media_Control",
  "Storage_Streams",
  "docs",
  "implement",
  "Foundation",
] }

[target.'cfg(unix)'.dependencies]
dbus = { version = "0.9.7", features = ["futures"] }
