[package]
name = "media_session"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
log = "0.4.22"
json = { version = "0.12.4", optional = true }
colog = { version = "1.3.0", optional = true }
serde = { version = "1.0.219", features = ["derive"], optional = true }

[features]
json = ["dep:json"]
colog = ["dep:colog"]
powerfont = []
serde = ["dep:serde"]

[target.'cfg(windows)'.dependencies]
windows = { version = "0.56.0", features = [
  "Media_Control",
  "Storage_Streams",
  "docs",
  "implement",
  "Foundation",
] }
tokio = { version = "1.45.1", features = ["rt", "sync"] }

[target.'cfg(unix)'.dependencies]
dbus = { version = "0.9.7", features = ["futures"] }

[[example]]
name = "logging"
required-features = ["colog"]

[[example]]
name = "cli"
