[package]
name = "media_session"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
colog = "1.3.0"
json = { version = "0.12.4", optional = true }
serde = { version = "1.0.219", features = ["derive"], optional = true }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", optional = true }

[features]
json = ["dep:json"]
serde = ["dep:serde"]
# Examples
powerfont = []
tracing-subscriber = ["dep:tracing-subscriber"]

[profile.test]
default = ["tracing-subscriber"]

[target.'cfg(windows)'.dependencies]
windows = { version = "0.56.0", features = [
  "Media_Control",
  "Storage_Streams",
  "docs",
  "implement",
  "Foundation",
] }
tokio = { version = "1.45.1", features = ["rt", "sync"] }

[target.'cfg(unix)'.dependencies]
dbus = { version = "0.9.7", features = ["futures"] }

[[example]]
name = "logging"
required-features = ["tracing-subscriber"]
